--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
             <p>
               Hello, I'm Christian. Graduated of Information in Computer and Technology in Programming with certificate and im planning to take Bachelor's Degree in Computer Science by next school year.
-              I created different stuffs including Web Designs, Console Programs on different programming languages i know and learned from the past school year. Graphics-plugins that uses JSON with Lua to import and seen ingame. That really helps me understand better how Object Oriented Programming works.
+              I created different stuffs including Web Designs, Console Programs on different programming languages i learned from the past school year. Graphics-plugins that uses JSON with Lua to import and seen ingame. That really helps me understand better how Object Oriented Programming works.
               I also manage to learn some Programming languages (C#,Lua) and experience making a 2D game with Unity by my own.
             </p>
           </div>
