Add social links ref

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <h1 class="text-light"><a href="index-dark.html">Christian Roldan</a></h1>
         <h6>Hadestia</h6>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="github"><i class="bx bxl-github"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="gmail"><i class="bx bxl-google"></i></a>
-          <a href="#" class="youtube"><i class="bx bxl-youtube"></i></a>
+          <a href="https://github.com/Hadestia" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.facebook.com/rj.roldan.75" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="#my-email" class="gmail"><i class="bx bxl-google"></i></a>
+          <a href="https://m.youtube.com/channel/UC5qG-r8y21036JZbGRClbdQ" class="youtube"><i class="bx bxl-youtube"></i></a>
         </div>
       </div>
 
@@ -590,7 +590,7 @@
                 <p>23-c Agnessville Subd. Antipolo Rizal</p>
               </div>
 
-              <div class="email">
+              <div id="my-email" class="email">
                 <i class="bx bx-envelope"></i>
                 <h4>Email:</h4>
                 <p>rjchristianroldan@gmail.com</p>
