--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 </head>
 
 <body>
-    <!-- ======= Cookie alert ======= -->
+    <!-- ======= Cookie alert =======
     <div class="alert text-center cookiealert" role="alert">
         &#x1F36A; This website stores data such as cookies to enable site functionality including analytics and personalization. By clicking the 'Ok' button, you automatically accept that we use cookies. <a href="https://cookiesandyou.com/" target="_blank">Learn more</a>
         <button type="button" class="btn btn-primary btn-sm acceptcookies"> Ok </button>
     </div>
+    -->
   
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -474,7 +475,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/cookie-alert/cookiealert.js"></script>
+  <!-- <script src="assets/vendor/cookie-alert/cookiealert.js"></script> -->
   <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
   <!-- JQuery -->
