--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Hadestia:Portfolio</title>
-  <meta content="Website Portfolio, semi CV/Resume of Christian Roldan" name="description">
+  <meta content="Website Portfolio, semi CV/Resume of Christian Roldan" nameescription">
   <meta content="Hadestia" name="keywords">
 
   <!-- Website icons -->
@@ -414,7 +414,7 @@
 
           </div>
           <!-- Email Form -->
-          <!-- Default: <form action="forms/?.php" method="post" role="form" class="php-email-form"> -->
+          <!-- Default: <form action="forms/?.php" method="post" role="form" class="php-email-form">
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form role="form" class="php-email-form">
               <div class="row">
@@ -442,7 +442,7 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div>
+          </div> -->
 
         </div>
       </div>
