--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Google Fonts src: https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i-->
   <link href="assets/vendor/google/google-fonts.css" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
+  <!-- ======= JavaScripts ======= -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/bootstrap-icons.css" rel="stylesheet">
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+    
     <!-- ======= Cookie alert =======
     <div class="alert text-center cookiealert" role="alert">
         &#x1F36A; This website stores data such as cookies to enable site functionality including analytics and personalization. By clicking the 'Ok' button, you automatically accept that we use cookies. <a href="https://cookiesandyou.com/" target="_blank">Learn more</a>
@@ -416,7 +417,7 @@
           <!-- Email Form -->
           <!-- Default: <form action="forms/?.php" method="post" role="form" class="webhook-email-form"> -->
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form role="form" class="webhook-email-form">
+            <form role="form" class="webhook-email-form" ref-path='json/webhooks.json' obj-ref='portfolio'>
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Username</label>
@@ -463,10 +464,9 @@
     </div>
   </footer><!-- End  Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#hero" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   
   <!-- ======= JavaScripts ======= -->
-  <!-- Plugins -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -476,15 +476,17 @@
   <script src="assets/vendor/typed/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/cookie-alert/cookiealert.js"></script>
+  <script src="assets/vendor/sodium-plus/sodium-plus.min.js"></script>
+  <script src="assets/vendor/crypto/crypto-3.1.2.js"></script>
   <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
-
+  
   <!-- JQuery -->
   <script src="assets/jquery/jquery-3.6.0.min.js"></script>
   
   <!-- Main Scripts -->
   <script src="assets/js/effects.js"></script>
   <script src="assets/js/projects.js"></script>
-  <script src="assets/js/discord-send-mail.js"></script>
+  <script src="assets/js/discord-mail-sender.js"></script>
   
 </body>
 </html>
