Update home Name href

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div class="profile">
         <img src="assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index-dark.html">Christian Roldan</a></h1>
+        <h1 class="text-light"><a href="#hero">Christian Roldan</a></h1>
         <h6>Hadestia</h6>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/Hadestia" class="github"><i class="bx bxl-github"></i></a>
