--- a/index.html
+++ b/index.html
@@ -480,9 +480,9 @@
   <!-- JQuery -->
   <script src="assets/jquery/jquery-3.6.0.min.js"></script>
   <!-- Main Scripts -->
+  <script src="assets/js/main.js"></script>
   <script src="assets/js/effects.js"></script>
-  <script src="assets/js/projects.js"></script>
-  <script src="assets/js/discord-mail-sender.js"></script>
+  <!--<script src="assets/js/discord-mail-sender.js"></script> -->
   
 </body>
 </html>
