testing update on skills rows

--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
                 <div class="icon"><i class="bi bi-translate"></i></div>
                 <h4 class="title">Good English Communicator</h4>
               </div>
+            </div>
+            
+            <div class="row">
               <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
                 <div class="icon"><i class="bi bi-brush"></i></div>
                 <h4 class="title">Line Drawing/Digital Arts</h4>
@@ -193,6 +196,7 @@
                 <h4 class="title">Fast Learner</h4>
               </div>
             </div>
+            
             <br>
             <div class="progress thtml">
               <span class="skill">HTML <i class="val">100%</i></span>
