--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>23C Agnessville Subd. Antipolo Rizal</p>
+                <p>Antipolo Rizal, Philippines</p>
               </div>
 
               <div id="my-email" class="email">
@@ -412,7 +412,7 @@
               </div>
               -->
               
-              <iframe src="https://maps.google.com/maps?q=Agnesville%20Subdivision%20J49M+48R,%20Antipolo,%20Rizal&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://maps.google.com/maps?q=Antipolo%20Rizal&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
